--- a/src/BowlingFrame/BowlingFrame.css
+++ b/src/BowlingFrame/BowlingFrame.css
@@ -4,6 +4,7 @@
   width: 75px;
   margin: 5px;
   display: flex;
+  position: relative;
 }
 
 .frameNumber {
@@ -12,25 +13,30 @@
   color: gray;
   margin-bottom: 60%;
   padding: 0px 2px 0px 2px;
-  border: medium solid black;
-  border-left: none;
-  border-top: none;
 }
 
 .frameScore {
-  height: 50%;
+  height: 60%;
+  margin-top: 40%;
+  margin-left: 10px;
 }
 
 .firstBallScore {
   height: 50%;
-  width: 30%;
+  width: 40%;
   margin: 0px 0px 50% 15px;
-  border: thin solid darkgrey;
 }
 
 .secondBallScore {
   height: 50%;
-  width: 30%;
+  width: 40%;
+  margin-bottom: 50%;
+  border: thin solid darkgrey;
+}
+
+.thirdBallScore {
+  height: 50%;
+  width: 40%;
   margin-bottom: 50%;
   border: thin solid darkgrey;
 }
